# serializer version: 1
# name: test_add_helm_repos
  list([
    list([
      'repo',
      'add',
      '--force-update',
      'argoproj',
      'https://argoproj.github.io/argo-helm',
    ]),
  ])
# ---
# name: test_add_helm_repos.1
  list([
    list([
      'repo',
      'add',
      '--force-update',
      'argoproj',
      'https://argoproj.github.io/argo-helm',
    ]),
    list([
      'repo',
      'add',
      '--force-update',
      'jupyterhub',
      'https://jupyterhub.github.io/helm-chart/',
    ]),
    list([
      'repo',
      'add',
      '--force-update',
      'lsst-sqre',
      'https://lsst-sqre.github.io/charts/',
    ]),
  ])
# ---
# name: test_create
  '''
  # These four settings should be set in each environment values-*.yaml file.
  
  # -- Name of the environment
  # @default -- None, must be set
  name: ""
  
  # -- Fully-qualified domain name where the environment is running
  # @default -- None, must be set
  fqdn: ""
  
  # -- Name of the parent Argo CD app-of-apps that manages all the applications
  # enabled for this environment
  appOfAppsName: "app-of-apps"
  
  onepassword:
    # -- URL to the 1Password server for this environment, if 1Password is used
    # for static secrets.
    # @default -- Do not use 1Password.
    connectUrl: ""
  
    # -- Title of the 1Password vault to use for static secrets.
    vaultTitle: ""
  
  # -- URL of Vault server for this environment
  # @default -- None, must be set
  vaultUrl: ""
  
  # -- Prefix for Vault secrets for this environment
  # @default -- None, must be set
  vaultPathPrefix: ""
  
  applications:
    # -- Enable the aaa-new-app application
    aaa-new-app: false
  
    # -- Enable the Argo CD application. This must be enabled for all
    # environments and is present here only because it makes parsing easier
    argocd: true
  
    # -- Enable the Gafaelfawr application. This is required by Phalanx since
    # most other applications use `GafaelfawrIngress`
    gafaelfawr: true
  
    # -- Enable the hips application
    hips: false
  
    # -- Enable the mobu application
    mobu: false
  
    # -- Enable the nublado application
    nublado: false
  
    # -- Enable the portal application
    portal: false
  
    # -- Enable the in-cluster PostgreSQL server. Use of this server is
    # discouraged in favor of using infrastructure SQL, but will remain
    # supported for use cases such as minikube test deployments.
    postgres: false
  
    # -- Enable the tap application
    tap: false
  
    # -- Enable the zzz-other-app application
    zzz-other-app: false
  
  '''
# ---
# name: test_create.1
  '''
  ######################
  Cluster infrastructure
  ######################
  
  These applications provide the core functionality of a Phalanx environment.
  Access to write operations on these Argo CD applications is often restricted only to environment administrators.
  
  Argo CD project: ``infrastructure``
  
  .. toctree::
     :maxdepth: 1
  
     aaa-new-app/index
     argocd/index
     cert-manager/index
     ingress-nginx/index
     gafaelfawr/index
     mobu/index
     postgres/index
     strimzi/index
     strimzi-access-operator/index
     vault-secrets-operator/index
  
  '''
# ---
# name: test_create.2
  '''
  ######################
  Rubin Science Platform
  ######################
  
  These applications constitute the Rubin Science Platform, which provides a portal, user notebooks, and IVOA-compatible APIs for astronomers.
  
  Argo CD project: ``rsp``
  
  .. toctree::
     :maxdepth: 1
  
     butler/index
     datalinker/index
     filestore-backup/index
     hips/index
     jira-data-proxy/index
     livetap/index
     noteburst/index
     nublado/index
     portal/index
     semaphore/index
     sia/index
     sqlproxy-cross-project/index
     squareone/index
     ssotap/index
     tap/index
     times-square/index
     vo-cutouts/index
     zzz-other-app/index
  
  '''
# ---
# name: test_lint
  list([
    list([
      'repo',
      'add',
      '--force-update',
      'lsst-sqre',
      'https://lsst-sqre.github.io/charts/',
    ]),
    list([
      'repo',
      'update',
    ]),
    list([
      'dependency',
      'update',
      '--skip-refresh',
    ]),
    list([
      'lint',
      'gafaelfawr',
      '--strict',
      '--values',
      'gafaelfawr/values.yaml',
      '--values',
      'gafaelfawr/values-idfdev.yaml',
      '--set',
      'global.host=data-dev.lsst.cloud,global.baseUrl=https://data-dev.lsst.cloud,global.environmentName=idfdev,global.repertoireUrl=https://data-dev.lsst.cloud/repertoire,global.vaultSecretsPath=secret/phalanx/idfdev,global.gcpProjectId=science-platform-dev-7696,global.gcpRegion=us-central1',
    ]),
  ])
# ---
# name: test_lint.1
  list([
    list([
      'repo',
      'add',
      '--force-update',
      'lsst-sqre',
      'https://lsst-sqre.github.io/charts/',
    ]),
    list([
      'repo',
      'update',
    ]),
    list([
      'dependency',
      'update',
      '--skip-refresh',
    ]),
    list([
      'lint',
      'gafaelfawr',
      '--strict',
      '--values',
      'gafaelfawr/values.yaml',
      '--values',
      'gafaelfawr/values-idfdev.yaml',
      '--set',
      'global.host=data-dev.lsst.cloud,global.baseUrl=https://data-dev.lsst.cloud,global.environmentName=idfdev,global.repertoireUrl=https://data-dev.lsst.cloud/repertoire,global.vaultSecretsPath=secret/phalanx/idfdev,global.gcpProjectId=science-platform-dev-7696,global.gcpRegion=us-central1',
    ]),
    list([
      'lint',
      'gafaelfawr',
      '--strict',
      '--values',
      'gafaelfawr/values.yaml',
      '--values',
      'gafaelfawr/values-minikube.yaml',
      '--set',
      'global.host=minikube.lsst.cloud,global.baseUrl=https://minikube.lsst.cloud,global.environmentName=minikube,global.repertoireUrl=https://minikube.lsst.cloud/repertoire,global.vaultSecretsPath=secret/phalanx/minikube',
    ]),
    list([
      'dependency',
      'update',
      '--skip-refresh',
    ]),
    list([
      'lint',
      'portal',
      '--strict',
      '--values',
      'portal/values.yaml',
      '--values',
      'portal/values-idfdev.yaml',
      '--set',
      'global.host=data-dev.lsst.cloud,global.baseUrl=https://data-dev.lsst.cloud,global.environmentName=idfdev,global.repertoireUrl=https://data-dev.lsst.cloud/repertoire,global.vaultSecretsPath=secret/phalanx/idfdev,global.gcpProjectId=science-platform-dev-7696,global.gcpRegion=us-central1',
    ]),
  ])
# ---
# name: test_lint_all
  list([
    list([
      'repo',
      'add',
      '--force-update',
      'argoproj',
      'https://argoproj.github.io/argo-helm',
    ]),
    list([
      'repo',
      'add',
      '--force-update',
      'jupyterhub',
      'https://jupyterhub.github.io/helm-chart/',
    ]),
    list([
      'repo',
      'add',
      '--force-update',
      'lsst-sqre',
      'https://lsst-sqre.github.io/charts/',
    ]),
    list([
      'repo',
      'update',
    ]),
    list([
      'dependency',
      'update',
      '--skip-refresh',
    ]),
    list([
      'lint',
      'argocd',
      '--strict',
      '--values',
      'argocd/values.yaml',
      '--values',
      'argocd/values-idfdev.yaml',
      '--set',
      'global.host=data-dev.lsst.cloud,global.baseUrl=https://data-dev.lsst.cloud,global.environmentName=idfdev,global.repertoireUrl=https://data-dev.lsst.cloud/repertoire,global.vaultSecretsPath=secret/phalanx/idfdev,global.gcpProjectId=science-platform-dev-7696,global.gcpRegion=us-central1',
    ]),
    list([
      'lint',
      'argocd',
      '--strict',
      '--values',
      'argocd/values.yaml',
      '--values',
      'argocd/values-minikube.yaml',
      '--set',
      'global.host=minikube.lsst.cloud,global.baseUrl=https://minikube.lsst.cloud,global.environmentName=minikube,global.repertoireUrl=https://minikube.lsst.cloud/repertoire,global.vaultSecretsPath=secret/phalanx/minikube',
    ]),
    list([
      'lint',
      'argocd',
      '--strict',
      '--values',
      'argocd/values.yaml',
      '--values',
      'argocd/values-usdfdev-prompt-processing.yaml',
      '--set',
      'global.host=usdf-prompt-processing-dev.slac.stanford.edu,global.baseUrl=https://usdf-prompt-processing-dev.slac.stanford.edu,global.environmentName=usdfdev-prompt-processing,global.repertoireUrl=https://usdf-prompt-processing-dev.slac.stanford.edu/repertoire,global.vaultSecretsPath=secret/rubin/usdf-prompt-processing-dev',
    ]),
    list([
      'dependency',
      'update',
      '--skip-refresh',
    ]),
    list([
      'lint',
      'gafaelfawr',
      '--strict',
      '--values',
      'gafaelfawr/values.yaml',
      '--values',
      'gafaelfawr/values-idfdev.yaml',
      '--set',
      'global.host=data-dev.lsst.cloud,global.baseUrl=https://data-dev.lsst.cloud,global.environmentName=idfdev,global.repertoireUrl=https://data-dev.lsst.cloud/repertoire,global.vaultSecretsPath=secret/phalanx/idfdev,global.gcpProjectId=science-platform-dev-7696,global.gcpRegion=us-central1',
    ]),
    list([
      'lint',
      'gafaelfawr',
      '--strict',
      '--values',
      'gafaelfawr/values.yaml',
      '--values',
      'gafaelfawr/values-minikube.yaml',
      '--set',
      'global.host=minikube.lsst.cloud,global.baseUrl=https://minikube.lsst.cloud,global.environmentName=minikube,global.repertoireUrl=https://minikube.lsst.cloud/repertoire,global.vaultSecretsPath=secret/phalanx/minikube',
    ]),
    list([
      'dependency',
      'update',
      '--skip-refresh',
    ]),
    list([
      'lint',
      'nublado',
      '--strict',
      '--values',
      'nublado/values.yaml',
      '--values',
      'nublado/values-idfdev.yaml',
      '--set',
      'global.host=data-dev.lsst.cloud,global.baseUrl=https://data-dev.lsst.cloud,global.environmentName=idfdev,global.repertoireUrl=https://data-dev.lsst.cloud/repertoire,global.vaultSecretsPath=secret/phalanx/idfdev,global.gcpProjectId=science-platform-dev-7696,global.gcpRegion=us-central1',
    ]),
    list([
      'dependency',
      'update',
      '--skip-refresh',
    ]),
    list([
      'lint',
      'portal',
      '--strict',
      '--values',
      'portal/values.yaml',
      '--values',
      'portal/values-idfdev.yaml',
      '--set',
      'global.host=data-dev.lsst.cloud,global.baseUrl=https://data-dev.lsst.cloud,global.environmentName=idfdev,global.repertoireUrl=https://data-dev.lsst.cloud/repertoire,global.vaultSecretsPath=secret/phalanx/idfdev,global.gcpProjectId=science-platform-dev-7696,global.gcpRegion=us-central1',
    ]),
    list([
      'dependency',
      'update',
      '--skip-refresh',
    ]),
    list([
      'lint',
      'postgres',
      '--strict',
      '--values',
      'postgres/values.yaml',
      '--values',
      'postgres/values-idfdev.yaml',
      '--set',
      'global.host=data-dev.lsst.cloud,global.baseUrl=https://data-dev.lsst.cloud,global.environmentName=idfdev,global.repertoireUrl=https://data-dev.lsst.cloud/repertoire,global.vaultSecretsPath=secret/phalanx/idfdev,global.gcpProjectId=science-platform-dev-7696,global.gcpRegion=us-central1',
    ]),
    list([
      'lint',
      'postgres',
      '--strict',
      '--values',
      'postgres/values.yaml',
      '--values',
      'postgres/values-minikube.yaml',
      '--set',
      'global.host=minikube.lsst.cloud,global.baseUrl=https://minikube.lsst.cloud,global.environmentName=minikube,global.repertoireUrl=https://minikube.lsst.cloud/repertoire,global.vaultSecretsPath=secret/phalanx/minikube',
    ]),
  ])
# ---
# name: test_lint_all_git
  list([
    list([
      'repo',
      'add',
      '--force-update',
      'argoproj',
      'https://argoproj.github.io/argo-helm',
    ]),
    list([
      'repo',
      'add',
      '--force-update',
      'lsst-sqre',
      'https://lsst-sqre.github.io/charts/',
    ]),
    list([
      'repo',
      'update',
    ]),
    list([
      'dependency',
      'update',
      '--skip-refresh',
    ]),
    list([
      'lint',
      'argocd',
      '--strict',
      '--values',
      'argocd/values.yaml',
      '--values',
      'argocd/values-idfdev.yaml',
      '--set',
      'global.host=data-dev.lsst.cloud,global.baseUrl=https://data-dev.lsst.cloud,global.environmentName=idfdev,global.repertoireUrl=https://data-dev.lsst.cloud/repertoire,global.vaultSecretsPath=secret/phalanx/idfdev,global.gcpProjectId=science-platform-dev-7696,global.gcpRegion=us-central1',
    ]),
    list([
      'dependency',
      'update',
      '--skip-refresh',
    ]),
    list([
      'lint',
      'gafaelfawr',
      '--strict',
      '--values',
      'gafaelfawr/values.yaml',
      '--values',
      'gafaelfawr/values-idfdev.yaml',
      '--set',
      'global.host=data-dev.lsst.cloud,global.baseUrl=https://data-dev.lsst.cloud,global.environmentName=idfdev,global.repertoireUrl=https://data-dev.lsst.cloud/repertoire,global.vaultSecretsPath=secret/phalanx/idfdev,global.gcpProjectId=science-platform-dev-7696,global.gcpRegion=us-central1',
    ]),
    list([
      'lint',
      'gafaelfawr',
      '--strict',
      '--values',
      'gafaelfawr/values.yaml',
      '--values',
      'gafaelfawr/values-minikube.yaml',
      '--set',
      'global.host=minikube.lsst.cloud,global.baseUrl=https://minikube.lsst.cloud,global.environmentName=minikube,global.repertoireUrl=https://minikube.lsst.cloud/repertoire,global.vaultSecretsPath=secret/phalanx/minikube',
    ]),
    list([
      'dependency',
      'update',
      '--skip-refresh',
    ]),
    list([
      'lint',
      'portal',
      '--strict',
      '--values',
      'portal/values.yaml',
      '--values',
      'portal/values-idfdev.yaml',
      '--set',
      'global.host=data-dev.lsst.cloud,global.baseUrl=https://data-dev.lsst.cloud,global.environmentName=idfdev,global.repertoireUrl=https://data-dev.lsst.cloud/repertoire,global.vaultSecretsPath=secret/phalanx/idfdev,global.gcpProjectId=science-platform-dev-7696,global.gcpRegion=us-central1',
    ]),
  ])
# ---
# name: test_lint_no_repos
  list([
    list([
      'dependency',
      'update',
      '--skip-refresh',
    ]),
    list([
      'lint',
      'postgres',
      '--strict',
      '--values',
      'postgres/values.yaml',
      '--values',
      'postgres/values-idfdev.yaml',
      '--set',
      'global.host=data-dev.lsst.cloud,global.baseUrl=https://data-dev.lsst.cloud,global.environmentName=idfdev,global.repertoireUrl=https://data-dev.lsst.cloud/repertoire,global.vaultSecretsPath=secret/phalanx/idfdev,global.gcpProjectId=science-platform-dev-7696,global.gcpRegion=us-central1',
    ]),
  ])
# ---
